# IntermediateProject

./: CMakeCache.txt  README.md
IntermediateProject/: Book.cpp  Book.h  CMakeLists.txt  Date.cpp  Date.h  ISBN.cpp  ISBN.h  Main.cpp  ProgettoIntermedio.vcxproj  ProgettoIntermedio.vcxproj.filters
